[metadata]
name = datamatch
version = 0.1.14
author = Khoi Pham
author_email = pckhoi@gmail.com
description = Data matching utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pckhoi/datamatch
project_urls =
    Bug Tracker = https://github.com/pckhoi/datamatch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = datamatch
python_requires = >=3.9
install_requires =
    numpy >= 1.18
    pandas >= 1.2
    python-Levenshtein >= 0.12
    Unidecode >= 1.1
    tqdm >= 4.61.1
